@@ -1,14 +1,15 @@
 package de.tum.in.www1.artemis.web.rest;
 
-import static de.tum.in.www1.artemis.web.rest.util.ResponseUtil.*;
 import static java.time.ZonedDateTime.now;
 
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.security.Principal;
 import java.util.*;
-import java.util.stream.Collectors;
 
+import javax.annotation.Nullable;
+
+import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
@@ -39,9 +40,10 @@ import de.tum.in.www1.artemis.service.feature.FeatureToggle;
 import de.tum.in.www1.artemis.service.feature.FeatureToggleService;
 import de.tum.in.www1.artemis.service.messaging.InstanceMessageSendService;
 import de.tum.in.www1.artemis.service.programming.ProgrammingExerciseParticipationService;
+import de.tum.in.www1.artemis.web.rest.errors.AccessForbiddenException;
 import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
+import de.tum.in.www1.artemis.web.rest.errors.ConflictException;
 import de.tum.in.www1.artemis.web.rest.util.HeaderUtil;
-import de.tum.in.www1.artemis.web.rest.util.ResponseUtil;
 
 /**
  * REST controller for managing Participation.
@@ -124,14 +126,13 @@ public class ParticipationResource {
     /**
      * POST /courses/:courseId/exercises/:exerciseId/participations : start the "participationId" exercise for the current user.
      *
-     * @param courseId   only included for API consistency, not actually used
      * @param exerciseId the participationId of the exercise for which to init a participation
      * @return the ResponseEntity with status 201 (Created) and the participation within the body, or with status 404 (Not Found)
      * @throws URISyntaxException If the URI for the created participation could not be created
      */
     @PostMapping(Endpoints.START_PARTICIPATION)
     @PreAuthorize("hasRole('USER')")
-    public ResponseEntity<Participation> startParticipation(@PathVariable Long courseId, @PathVariable Long exerciseId) throws URISyntaxException {
+    public ResponseEntity<Participation> startParticipation(@PathVariable Long exerciseId) throws URISyntaxException {
         log.debug("REST request to start Exercise : {}", exerciseId);
         Exercise exercise = exerciseRepository.findByIdElseThrow(exerciseId);
         User user = userRepository.getUserWithGroupsAndAuthorities();
@@ -141,19 +142,16 @@ public class ParticipationResource {
         // if the user is a student and the exercise has a release date, they cannot start the exercise before the release date
         if (exercise.getReleaseDate() != null && exercise.getReleaseDate().isAfter(now())) {
             if (authCheckService.isOnlyStudentInCourse(exercise.getCourseViaExerciseGroupOrCourseMember(), user)) {
-                return forbidden();
+                throw new AccessForbiddenException("Students cannot start an exercise before the release date");
             }
         }
 
-        // users cannot start the programming exercises if test run after due date or semi automatic grading is active and the due date has passed
         // Also don't allow participations if the feature is disabled
         if (exercise instanceof ProgrammingExercise) {
             // fetch additional objects needed for the startExercise method below
             var programmingExercise = programmingExerciseRepository.findByIdWithTemplateAndSolutionParticipationElseThrow(exercise.getId());
-            if (!featureToggleService.isFeatureEnabled(Feature.PROGRAMMING_EXERCISES) || (programmingExercise.getDueDate() != null
-                    && now().isAfter(programmingExercise.getDueDate()) && (programmingExercise.getBuildAndTestStudentSubmissionsAfterDueDate() != null
-                            || programmingExercise.getAssessmentType() != AssessmentType.AUTOMATIC || programmingExercise.getAllowComplaintsForAutomaticAssessments()))) {
-                return forbidden();
+            if (!featureToggleService.isFeatureEnabled(Feature.PROGRAMMING_EXERCISES) || isNotAllowedToStartProgrammingExercise(programmingExercise, null)) {
+                throw new AccessForbiddenException("Not allowed");
             }
             exercise = programmingExercise;
         }
@@ -171,17 +169,16 @@ public class ParticipationResource {
     }
 
     /**
-     * PUT /courses/:courseId/exercises/:exerciseId/resume-programming-participation: resume the participation of the current user in the given programming exercise
+     * PUT exercises/:exerciseId/resume-programming-participation: resume the participation of the current user in the given programming exercise
      *
-     * @param courseId   only included for API consistency, not actually used
      * @param exerciseId of the exercise for which to resume participation
      * @param principal  current user principal
      * @return ResponseEntity with status 200 (OK) and with updated participation as a body, or with status 500 (Internal Server Error)
      */
-    @PutMapping("/courses/{courseId}/exercises/{exerciseId}/resume-programming-participation")
+    @PutMapping("exercises/{exerciseId}/resume-programming-participation")
     @PreAuthorize("hasRole('USER')")
     @FeatureToggle(Feature.PROGRAMMING_EXERCISES)
-    public ResponseEntity<ProgrammingExerciseStudentParticipation> resumeParticipation(@PathVariable Long courseId, @PathVariable Long exerciseId, Principal principal) {
+    public ResponseEntity<ProgrammingExerciseStudentParticipation> resumeParticipation(@PathVariable Long exerciseId, Principal principal) {
         log.debug("REST request to resume Exercise : {}", exerciseId);
         var programmingExercise = programmingExerciseRepository.findByIdWithTemplateAndSolutionParticipationElseThrow(exerciseId);
         var participation = programmingExerciseParticipationService.findStudentParticipationByExerciseAndStudentId(programmingExercise, principal.getName());
@@ -190,10 +187,8 @@ public class ParticipationResource {
 
         User user = userRepository.getUserWithGroupsAndAuthorities();
         checkAccessPermissionOwner(participation, user);
-        // users cannot resume the programming exercises if test run after due date or semi automatic grading is active and the due date has passed
-        if (exerciseDateService.isAfterDueDate(participation) && (programmingExercise.getBuildAndTestStudentSubmissionsAfterDueDate() != null
-                || programmingExercise.getAssessmentType() != AssessmentType.AUTOMATIC || programmingExercise.getAllowComplaintsForAutomaticAssessments())) {
-            return forbidden();
+        if (isNotAllowedToStartProgrammingExercise(programmingExercise, participation)) {
+            throw new AccessForbiddenException("You are not allowed to start the programming exercise after its due date.");
         }
 
         participation = participationService.resumeProgrammingExercise(participation);
@@ -202,6 +197,14 @@ public class ParticipationResource {
         addLatestResultToParticipation(participation);
         participation.getExercise().filterSensitiveInformation();
         return ResponseEntity.ok().body(participation);
+    }
+
+    private boolean isNotAllowedToStartProgrammingExercise(ProgrammingExercise programmingExercise, @Nullable StudentParticipation participation) {
+        boolean isAfterDueDate = participation != null ? exerciseDateService.isAfterDueDate(participation)
+                : (programmingExercise.getDueDate() != null && now().isAfter(programmingExercise.getDueDate()));
+        // users cannot start/resume the programming exercises if test run after due date or semi-automatic grading is active and the due date has passed
+        return (isAfterDueDate && (programmingExercise.getBuildAndTestStudentSubmissionsAfterDueDate() != null
+                || programmingExercise.getAssessmentType() != AssessmentType.AUTOMATIC || programmingExercise.getAllowComplaintsForAutomaticAssessments()));
     }
 
     /**
@@ -227,7 +230,7 @@ public class ParticipationResource {
      * @return the ResponseEntity with status 200 (OK) and with body the updated participation, or with status 400 (Bad Request) if the participation is not valid, or with status
      *         500 (Internal Server Error) if the participation couldn't be updated
      */
-    @PutMapping("/exercises/{exerciseId}/participations")
+    @PutMapping("exercises/{exerciseId}/participations")
     @PreAuthorize("hasRole('TA')")
     public ResponseEntity<Participation> updateParticipation(@PathVariable long exerciseId, @RequestBody StudentParticipation participation) {
         log.debug("REST request to update Participation : {}", participation);
@@ -238,7 +241,7 @@ public class ParticipationResource {
             throw new BadRequestAlertException("The participation needs to be connected to an exercise", ENTITY_NAME, "exerciseidmissing");
         }
         if (participation.getExercise().getId() != exerciseId) {
-            return conflict();
+            throw new ConflictException("The exercise of the participation does not match the exercise id in the URL", ENTITY_NAME, "noidmatch");
         }
         var originalParticipation = studentParticipationRepository.findByIdElseThrow(participation.getId());
         var user = userRepository.getUserWithGroupsAndAuthorities();
@@ -314,7 +317,7 @@ public class ParticipationResource {
      * @param withLatestResult Whether the {@link Result results} for the participations should also be fetched
      * @return A list of all participations for the exercise
      */
-    @GetMapping("/exercises/{exerciseId}/participations")
+    @GetMapping("exercises/{exerciseId}/participations")
     @PreAuthorize("hasRole('TA')")
     public ResponseEntity<List<StudentParticipation>> getAllParticipationsForExercise(@PathVariable Long exerciseId,
             @RequestParam(defaultValue = "false") boolean withLatestResult) {
@@ -334,7 +337,10 @@ public class ParticipationResource {
         else {
             participations = studentParticipationRepository.findByExerciseId(exerciseId);
         }
-        participations = participations.stream().filter(participation -> participation.getParticipant() != null).collect(Collectors.toList());
+        participations = participations.stream().filter(participation -> participation.getParticipant() != null).peek(participation -> {
+            // remove unnecessary data to reduce response size
+            participation.setExercise(null);
+        }).toList();
 
         Map<Long, Integer> submissionCountMap = studentParticipationRepository.countSubmissionsPerParticipationByExerciseIdAsMap(exerciseId);
         participations.forEach(participation -> participation.setSubmissionCount(submissionCountMap.get(participation.getId())));
@@ -348,7 +354,7 @@ public class ParticipationResource {
      * @param courseId The participationId of the course
      * @return A list of all participations for the given course
      */
-    @GetMapping("/courses/{courseId}/participations")
+    @GetMapping("courses/{courseId}/participations")
     @PreAuthorize("hasRole('INSTRUCTOR')")
     public ResponseEntity<List<StudentParticipation>> getAllParticipationsForCourse(@PathVariable Long courseId) {
         long start = System.currentTimeMillis();
@@ -408,7 +414,7 @@ public class ParticipationResource {
      * @param participationId the participationId of the participation to retrieve
      * @return the ResponseEntity with status 200 (OK) and with body the participation, or with status 404 (Not Found)
      */
-    @GetMapping("/participations/{participationId}/withLatestResult")
+    @GetMapping("participations/{participationId}/withLatestResult")
     @PreAuthorize("hasRole('USER')")
     public ResponseEntity<StudentParticipation> getParticipationWithLatestResult(@PathVariable Long participationId) {
         log.debug("REST request to get Participation : {}", participationId);
@@ -429,14 +435,14 @@ public class ParticipationResource {
      * @param participationId the participationId of the participation to retrieve
      * @return the ResponseEntity with status 200 (OK) and with body the participation, or with status 404 (Not Found)
      */
-    @GetMapping("/participations/{participationId}")
+    @GetMapping("participations/{participationId}")
     @PreAuthorize("hasRole('USER')")
-    public ResponseEntity<StudentParticipation> getParticipation(@PathVariable Long participationId) {
+    public ResponseEntity<StudentParticipation> getParticipationForCurrentUser(@PathVariable Long participationId) {
         log.debug("REST request to get participation : {}", participationId);
         StudentParticipation participation = studentParticipationRepository.findByIdElseThrow(participationId);
         User user = userRepository.getUserWithGroupsAndAuthorities();
         checkAccessPermissionOwner(participation, user);
-        return Optional.ofNullable(participation).map(result -> new ResponseEntity<>(result, HttpStatus.OK)).orElse(ResponseUtil.notFound());
+        return new ResponseEntity<>(participation, HttpStatus.OK);
     }
 
     /**
@@ -445,7 +451,7 @@ public class ParticipationResource {
      * @param participationId The participationId of the participation
      * @return The latest build artifact (JAR/WAR) for the participation
      */
-    @GetMapping("/participations/{participationId}/buildArtifact")
+    @GetMapping("participations/{participationId}/buildArtifact")
     @PreAuthorize("hasRole('USER')")
     public ResponseEntity<byte[]> getParticipationBuildArtifact(@PathVariable Long participationId) {
         log.debug("REST request to get Participation build artifact: {}", participationId);
@@ -457,16 +463,16 @@ public class ParticipationResource {
     }
 
     /**
-     * GET /courses/:courseId/exercises/:exerciseId/participation: get the user's participation for a specific exercise. Please note: 'courseId' is only included in the call for
-     * API consistency, it is not actually used //TODO remove courseId from the URL
+     * GET /exercises/:exerciseId/participation: get the user's participation for a specific exercise. Please note: 'courseId' is only included in the call for
+     * API consistency, it is not actually used
      *
      * @param exerciseId the participationId of the exercise for which to retrieve the participation
      * @param principal The principal in form of the user's identity
      * @return the ResponseEntity with status 200 (OK) and with body the participation, or with status 404 (Not Found)
      */
-    @GetMapping("/exercises/{exerciseId}/participation")
+    @GetMapping("exercises/{exerciseId}/participation")
     @PreAuthorize("hasRole('USER')")
-    public ResponseEntity<MappingJacksonValue> getParticipation(@PathVariable Long exerciseId, Principal principal) {
+    public ResponseEntity<MappingJacksonValue> getParticipationForCurrentUser(@PathVariable Long exerciseId, Principal principal) {
         log.debug("REST request to get Participation for Exercise : {}", exerciseId);
         Exercise exercise = exerciseRepository.findByIdElseThrow(exerciseId);
         authCheckService.checkHasAtLeastRoleForExerciseElseThrow(Role.STUDENT, exercise, null);
@@ -538,29 +544,19 @@ public class ParticipationResource {
      * @param participationId the participationId of the participation to delete
      * @param deleteBuildPlan True, if the build plan should also get deleted
      * @param deleteRepository True, if the repository should also get deleted
-     * @param principal The identity of the user accessing this resource
      * @return the ResponseEntity with status 200 (OK)
      */
-    @DeleteMapping("/participations/{participationId}")
+    @DeleteMapping("participations/{participationId}")
     @PreAuthorize("hasRole('INSTRUCTOR')")
     public ResponseEntity<Void> deleteParticipation(@PathVariable Long participationId, @RequestParam(defaultValue = "false") boolean deleteBuildPlan,
-            @RequestParam(defaultValue = "false") boolean deleteRepository, Principal principal) {
+            @RequestParam(defaultValue = "false") boolean deleteRepository) {
         StudentParticipation participation = studentParticipationRepository.findByIdElseThrow(participationId);
         if (participation instanceof ProgrammingExerciseParticipation && !featureToggleService.isFeatureEnabled(Feature.PROGRAMMING_EXERCISES)) {
-            return forbidden();
+            throw new AccessForbiddenException("Programming Exercise Feature is disabled.");
         }
-
         User user = userRepository.getUserWithGroupsAndAuthorities();
         checkAccessPermissionAtLeastInstructor(participation, user);
-
-        String name = participation.getParticipantName();
-        var logMessage = "Delete Participation " + participationId + " of exercise " + participation.getExercise().getTitle() + " for " + name + ", deleteBuildPlan: "
-                + deleteBuildPlan + ", deleteRepository: " + deleteRepository + " by " + principal.getName();
-        var auditEvent = new AuditEvent(user.getLogin(), Constants.DELETE_PARTICIPATION, logMessage);
-        auditEventRepository.add(auditEvent);
-        log.info(logMessage);
-        participationService.delete(participationId, deleteBuildPlan, deleteRepository);
-        return ResponseEntity.ok().headers(HeaderUtil.createEntityDeletionAlert(applicationName, true, "participation", name)).build();
+        return deleteParticipation(participation, deleteBuildPlan, deleteRepository, user);
     }
 
     /**
@@ -570,17 +566,15 @@ public class ParticipationResource {
      * @param participationId the participationId of the participation to delete
      * @param deleteBuildPlan True, if the build plan should also get deleted
      * @param deleteRepository True, if the repository should also get deleted
-     * @param principal The identity of the user accessing this resource
      * @return the ResponseEntity with status 200 (OK) or 403 (FORBIDDEN)
      */
-    @DeleteMapping("/guided-tour/participations/{participationId}")
+    @DeleteMapping("guided-tour/participations/{participationId}")
     @PreAuthorize("hasRole('USER')")
     public ResponseEntity<Void> deleteParticipationForGuidedTour(@PathVariable Long participationId, @RequestParam(defaultValue = "false") boolean deleteBuildPlan,
-            @RequestParam(defaultValue = "false") boolean deleteRepository, Principal principal) {
+            @RequestParam(defaultValue = "false") boolean deleteRepository) {
         StudentParticipation participation = studentParticipationRepository.findByIdElseThrow(participationId);
-
         if (participation instanceof ProgrammingExerciseParticipation && !featureToggleService.isFeatureEnabled(Feature.PROGRAMMING_EXERCISES)) {
-            return forbidden();
+            throw new AccessForbiddenException("Programming Exercise Feature is disabled.");
         }
 
         User user = userRepository.getUserWithGroupsAndAuthorities();
@@ -588,21 +582,32 @@ public class ParticipationResource {
         // Allow all users to delete their own StudentParticipations if it's for a tutorial
         if (participation.isOwnedBy(user)) {
             checkAccessPermissionAtLeastStudent(participation, user);
-            if (!guidedTourConfiguration.isExerciseForTutorial(participation.getExercise())) {
-                return forbidden();
-            }
+            guidedTourConfiguration.checkExerciseForTutorialElseThrow(participation.getExercise());
         }
         else {
-            return forbidden();
+            throw new AccessForbiddenException("Users are not allowed to delete their own participation.");
         }
 
+        return deleteParticipation(participation, deleteBuildPlan, deleteRepository, user);
+    }
+
+    /**
+     * delete the participation, potentially including build plan and repository and log the event in the database audit
+     * @param participation the participation to be deleted
+     * @param deleteBuildPlan whether the build plan should be deleted as well, only relevant for programming exercises
+     * @param deleteRepository whether the repository should be deleted as well, only relevant for programming exercises
+     * @param user the currently logged-in user who initiated the delete operation
+     * @return the response to the client
+     */
+    @NotNull
+    private ResponseEntity<Void> deleteParticipation(StudentParticipation participation, boolean deleteBuildPlan, boolean deleteRepository, User user) {
         String name = participation.getParticipantName();
-        var logMessage = "Delete Participation " + participationId + " of exercise " + participation.getExercise().getTitle() + " for " + name + ", deleteBuildPlan: "
-                + deleteBuildPlan + ", deleteRepository: " + deleteRepository + " by " + principal.getName();
+        var logMessage = "Delete Participation " + participation.getId() + " of exercise " + participation.getExercise().getTitle() + " for " + name + ", deleteBuildPlan: "
+                + deleteBuildPlan + ", deleteRepository: " + deleteRepository + " by " + user.getLogin();
         var auditEvent = new AuditEvent(user.getLogin(), Constants.DELETE_PARTICIPATION, logMessage);
         auditEventRepository.add(auditEvent);
         log.info(logMessage);
-        participationService.delete(participationId, deleteBuildPlan, deleteRepository);
+        participationService.delete(participation.getId(), deleteBuildPlan, deleteRepository);
         return ResponseEntity.ok().headers(HeaderUtil.createEntityDeletionAlert(applicationName, true, "participation", name)).build();
     }
 
@@ -614,7 +619,7 @@ public class ParticipationResource {
      * @param principal The identity of the user accessing this resource
      * @return the ResponseEntity with status 200 (OK)
      */
-    @PutMapping("/participations/{participationId}/cleanupBuildPlan")
+    @PutMapping("participations/{participationId}/cleanupBuildPlan")
     @PreAuthorize("hasRole('INSTRUCTOR')")
     @FeatureToggle(Feature.PROGRAMMING_EXERCISES)
     public ResponseEntity<Participation> cleanupBuildPlan(@PathVariable Long participationId, Principal principal) {
@@ -656,7 +661,7 @@ public class ParticipationResource {
      * @param participationId the id of the participation
      * @return all submissions that belong to the participation
      */
-    @GetMapping("/participations/{participationId}/submissions")
+    @GetMapping("participations/{participationId}/submissions")
     @PreAuthorize("hasRole('INSTRUCTOR')")
     public ResponseEntity<List<Submission>> getSubmissionsOfParticipation(@PathVariable Long participationId) {
         StudentParticipation participation = studentParticipationRepository.findByIdElseThrow(participationId);
@@ -670,7 +675,7 @@ public class ParticipationResource {
 
         public static final String ROOT = "/api";
 
-        public static final String START_PARTICIPATION = "/courses/{courseId}/exercises/{exerciseId}/participations";
+        public static final String START_PARTICIPATION = "/exercises/{exerciseId}/participations";
 
         private Endpoints() {
         }
